tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__BeeHouses-AAAAAAAAAAAAAAAAAAAEGg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1050,
  "prerequisites": [
    502
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Want some bee houses? Buy some!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bee Houses",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 48000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    502
  ],
  "rewards": [],
  "tasks": []
}
